# nuke-my-sessions

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
design/: SPEC.md
src/: cli.rs  delete_flow.rs  lib.rs  main.rs  output.rs  session.rs
src/delete_flow/: selector.rs  tui.rs
src/delete_flow/selector/: paging.rs  rows.rs
src/interactive/: mod.rs
src/interactive/tui/: app.rs  mod.rs  render.rs  terminal.rs
src/model/: session.rs
src/sources/: claude_code.rs  codex.rs  droid.rs  mod.rs
src/ui/: cli.rs  mod.rs  output.rs
tests/: cli.rs
