[package]
name = "nuke-my-sessions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.39", features = ["derive"] }
crossterm = "0.28.1"
dialoguer = "0.12.0"
directories = "6.0.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"
